[package]
authors = ["Jan <jankaul@mailbox.org>"]
edition = "2018"
name = "dashbook-markdown"
version = "0.1.10"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pulldown-cmark = "0.9.2"
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
